[gd_scene load_steps=12 format=3 uid="uid://dg2ooau0vrcse"]

[ext_resource type="Script" path="res://Script/main.gd" id="1_e5dyd"]
[ext_resource type="PackedScene" uid="uid://dwxko5gcwd3w4" path="res://Scenes/Enemy.tscn" id="2_8de5i"]
[ext_resource type="PackedScene" uid="uid://c60tvy3hgo56j" path="res://Scenes/player.tscn" id="7_abgl2"]
[ext_resource type="PackedScene" uid="uid://c12dhf2dnrm6q" path="res://Scenes/EnemySpawner.tscn" id="7_e1w5x"]
[ext_resource type="Script" path="res://Scenes/MenuHub.gd" id="7_pg6ue"]
[ext_resource type="PackedScene" uid="uid://vgv1eqkdo6ju" path="res://room.tscn" id="7_rg305"]
[ext_resource type="AudioStream" uid="uid://c21ogpey2tneq" path="res://assets/Robofunk.wav" id="7_sr0x6"]
[ext_resource type="PackedScene" uid="uid://054im774ytgn" path="res://Scenes/Menus/WinMenu.tscn" id="8_wl0yv"]
[ext_resource type="PackedScene" uid="uid://60b1hxcxvq3w" path="res://Scenes/Menus/PauseMenu.tscn" id="8_yhf1k"]
[ext_resource type="Script" path="res://Scenes/Camera2D.gd" id="10_6eeyb"]
[ext_resource type="PackedScene" uid="uid://cq63hn0bhba1i" path="res://Scenes/Menus/DeathMenu.tscn" id="10_ynfiv"]

[sub_resource type="Environment" id="Environment_k3g3d"]
background_mode = 3
glow_enabled = true
glow_levels/1 = 2.48
glow_levels/2 = 1.0
glow_intensity = 2.0
glow_hdr_threshold = 1.1
glow_hdr_luminance_cap = 101.65

[node name="Node2D" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_e5dyd")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_k3g3d")

[node name="AudioListener2D" type="AudioListener2D" parent="."]
position = Vector2(10, -18)

[node name="Enemy" parent="." instance=ExtResource("2_8de5i")]
position = Vector2(561, 37)

[node name="Player" parent="." groups=["player"] instance=ExtResource("7_abgl2")]
position = Vector2(433, 273)
collision_mask = 4

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
script = ExtResource("10_6eeyb")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_sr0x6")
autoplay = true

<<<<<<< HEAD
[node name="EnemySpawner" parent="." instance=ExtResource("7_e1w5x")]
position = Vector2(479, 252)
scale = Vector2(50, 25)

[node name="MenuHub" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("7_pg6ue")

[node name="WinMenu" parent="MenuHub" instance=ExtResource("8_wl0yv")]
visible = false

[node name="PauseMenu" parent="MenuHub" instance=ExtResource("8_yhf1k")]
z_index = 6

[node name="DeathMenu" parent="MenuHub" instance=ExtResource("10_ynfiv")]
visible = false

[connection signal="on_health_changed" from="Player" to="MenuHub" method="_on_player_on_health_changed"]
[connection signal="on_heat_changed" from="Player" to="MenuHub" method="_on_player_on_heat_changed"]
[node name="Room" parent="." instance=ExtResource("7_rg305")]
position = Vector2(-422, -1820)

[node name="RangedEnemy" parent="." instance=ExtResource("8_vok55")]
position = Vector2(366, 139)
speed = 40
